# brainwave

./: .gitignore  Cargo.toml  README.md  bw.py  config.json  models.json
connectors/vision/: vision_connector.py
src/: daemon.rs  main.rs
tasks/: corpo-brand-helper.md
