[package]
name = "brainwave"
version = "0.2.0"
edition = "2021"
description = "Local LLM inference stack + ML vision connector"

[[bin]]
name = "bw"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
colored = "2"
