[package]
name = "brainwave"
version = "0.3.0"
edition = "2021"
description = "Local ML inference daemon with dynamic model loading"

[[bin]]
name = "brainwave"
path = "src/daemon.rs"

[[bin]]
name = "bw"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
colored = "2"
tiny_http = "0.12"
